# contact-tracing-he

./: .gitattributes  README.md
.github/workflows/: ci.yml
backend-server/: .gitignore  build.gradle  gradle.properties  tables.sql
backend-server/src/main/java/dissertation/backend/: CiphertextWrapper.java  HeBackendServerForContactTracingApplication.java  JNIBridge.java  JSONBody.java  RequestsController.java  ServerConfiguration.java  SimpleController.java
backend-server/src/main/java/dissertation/backend/config/: Config.java  EncryptionType.java
backend-server/src/main/java/dissertation/backend/database/: Cleaner.java  ContactTracingHelper.java  Controller.java
backend-server/src/main/java/dissertation/backend/notification/: FCMNotificationManager.java
backend-server/src/main/java/dissertation/backend/serialization/: ComputedDistanceMessage.java  ContactMessage.java  JSONBody.java  Keys.java  LocationHistoryMessage.java  LocationUploadMessage.java  NewCaseMessage.java  NewKeysMessage.java  NewPartialMessage.java  NewTokenMessage.java  UploadDistanceMessage.java
backend-server/src/test/java/dissertation/backend/: HeBackendServerForContactTracingApplicationTests.java
he-component/: .gitignore
he-component/bridge/android/: CMakeLists.txt  com_example_phone_app_JNIBridge.cpp  com_example_phone_app_JNIBridge.h
he-component/bridge/ios/: he_bridge.cpp  he_bridge.hpp  he_bridge_wrapper.h  he_bridge_wrapper.mm
he-component/bridge/jni/: CMakeLists.txt  dissertation_backend_JNIBridge.cpp  dissertation_backend_JNIBridge.h
he-component/bridge/server/: CMakeLists.txt  dissertation_backend_JNIBridge.cpp
he-component/jni-bridge/: dissertation_backend_JNIBridge.h
he-component/src/client/: ckks_he_client.cpp  ckks_he_client.h  client_selector.cpp  client_selector.h  simple_he.cpp  simple_he.h
he-component/src/client/base/: client_base.cpp  client_base.h
he-component/src/client/lattigo/cpp/: lattigo_he_client.cpp  lattigo_he_client.h
he-component/src/client/lattigo/go/: Makefile  go.mod  go.sum  main.go
he-component/src/client/seal/: seal_he_client.cpp  seal_he_client.h
he-component/src/client/smkhe/: smkhe_he_client.cpp  smkhe_he_client.h
he-component/src/server/: ckks_he_server.cpp  ckks_he_server.h  server_selector.cpp  server_selector.h  simple_he.cpp  simple_he.h
he-component/src/server/base/: server_base.cpp  server_base.h
he-component/src/server/lattigo/cpp/: lattigo_he_server.cpp  lattigo_he_server.h
he-component/src/server/lattigo/go/: CMakeLists.txt  go.mod  main.go
he-component/src/server/seal/: seal_he_server.cpp  seal_he_server.h
he-component/src/server/smkhe/: smkhe_he_server.cpp  smkhe_he_server.h
he-component/src/util/: util.cpp  util.h
phone-app/: .gitignore  README.md  pubspec.yaml
phone-app/android/: .gitignore  build.gradle
phone-app/android/app/: build.gradle
phone-app/android/app/src/debug/: AndroidManifest.xml
phone-app/android/app/src/main/: AndroidManifest.xml
phone-app/android/app/src/main/assets/: test-locations-10-75m.json  test-locations.json
phone-app/android/app/src/main/java/com/example/phone_app/: CiphertextWrapper.java  JNIBridge.java  MainActivity.java
phone-app/android/app/src/main/java/com/example/phone_app/background/: BackgroundDecryptor.java  BootupBroadcastReceiver.java  CTLocationListener.java  ConnectionService.java  LocationModifier.java  LocationService.java  NotificationService.java  TestLocationUploader.java  Util.java
phone-app/android/app/src/main/java/com/example/phone_app/background/serialization/: ContactMessage.java  JSONBody.java  LocationUploadMessage.java  NewDistanceMessage.java  NewKeysMessage.java  NewPartialMessage.java  NewSavedLocations.java  NewTokenMessage.java
phone-app/android/app/src/main/java/com/example/phone_app/background/storage/: LocationEntity.java  StorageController.java
phone-app/android/app/src/main/java/com/example/phone_app/config/: Config.java  EncryptionType.java
phone-app/android/app/src/main/kotlin/com/example/he_contact_tracing/: MainActivity.kt
phone-app/ios/: .gitignore  Podfile
phone-app/ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
phone-app/ios/Runner.xcodeproj/: project.pbxproj
phone-app/ios/Runner.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
phone-app/ios/Runner.xcworkspace/xcshareddata/swiftpm/: Package.resolved
phone-app/ios/Runner/assets/: test-locations-10-75m.json  test-locations-15-75m.json  test-locations-75m-more.json  test-locations.json
phone-app/ios/Runner/background/: BackgroundDecryptor.swift  Config.swift  ConnectionService.swift  LocationModifier.swift  TestLocationUploader.swift  Util.swift
phone-app/ios/Runner/background/serialization/: CiphertextWrapper.swift  ContactMessage.swift  JsonBody.swift  LocationUploadMessage.swift  NewDistanceMessage.swift  NewKeysMessage.swift  NewPartialMessage.swift  NewSavedLocations.swift  NewTokenMessage.swift
phone-app/ios/Runner/background/storage/: LocationEntity.swift  StorageController.swift
phone-app/lib/: drawer.dart  main.dart  report_positive.dart
phone-app/lib/util/: connection_service.dart  google_places.dart  suggested_place.dart  util.dart
phone-app/test/: widget_test.dart
phone-app/web/: index.html
scripts/: build.sh  install_seal.sh
